# sonipresence

./: .dockerignore  .gitignore  README.md  pyproject.toml
flutter_app/: README.md  pubspec.yaml
flutter_app/.dart_tool/: package_config.json  package_config_subset  package_graph.json
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/example/sonipresence/: MainActivity.kt
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/app/: app_widget.dart  routes.dart
flutter_app/lib/ble/: ble_service.dart  discovered_device.dart  syggrel_connector.dart
flutter_app/lib/config/: app_sizes.dart  app_theme.dart  config.dart  screen_util_config.dart
flutter_app/lib/pages/: home_page.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: my_application.cc
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: Runner.rc  main.cpp
