[project]
name = "sonipresence"
version = "0.1.0"
description = "Client-server application for compact mobile devices, primarily for Android devices. The main purpose of the application is to record the voice environment by the server side and transfer the audio file with geolocation and time stamp to the client side to ensure the guardian is aware of the safety, location and environment of the ward."
authors = [
    {name = "Suvorrow",email = "suvoraum@gmail.com"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
